error code, exception, api, responses
프로젝트에서 사용할 에러 코드와 예외, 공통 응답 객체 설계 , 직접 정의한 예외를 사용함으로써 프로젝트에서 예상한 문제와 예상치 못한 문제를 분리하고자 함

--- a/getInLine/src/main/resources/templates/admin/places.html
+++ b/getInLine/src/main/resources/templates/admin/places.html
@@ -9,9 +9,10 @@
     This is admin places page.
 </p>
 <ul>
-    <li>placeType: <span th:text="${placeType}">?</span></li>
-    <li>placeType: <span th:text="${placeName}">?</span></li>
-    <li>placeType: <span th:text="${address}">?</span></li>
+    <li>placeType: <span th:text="${placeType}?:_">!</span></li>
+    <!-- ${}?:_를 쓰는 이유는 템플릿 엔진에서  변수값이 없으면 기본값으로 ! 를 표시하라는것-->
+    <li>placeType: <span th:text="${placeName}?:_">!</span></li>
+    <li>placeType: <span th:text="${address}?:_">!</span></li>
 </ul>
 
 
