--- a/getInLine/src/main/resources/templates/event/index.html
+++ b/getInLine/src/main/resources/templates/event/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
 <body>
 <p>
-  <span id="eventsTitle" th:text="'이벤트 리스트 조회' ?: _"> This is events page.</span>
+  <span id="eventsTitle" data-th-text="'이벤트 리스트 조회' ?: _"> This is events page.</span>
 </p>
 <table id="eventsTable">
   <thead>
@@ -21,15 +21,38 @@
     <th>상세</th>
   </tr>
   </thead>
-  <tbody>
+
+  <!--
+  <tbody th:remove="all-but-first"> 첫번째 tr 그룹만 빼고 다 안보이게 처리
     <tr th:each="event : ${events}">
-      <td class="placeId" th:text="${event.placeId}">1</td>
-      <td class="eventName" th:text="${event.eventName}">테스트 이벤트</td>
-      <td class="eventStatus" th:text="${event.eventStatus}">OPENED</td>
-      <td class="eventStartDatetime" th:text="${event.eventStartDatetime}">2021-01-01 09:00:00</td>
-      <td class="eventEndDatetime" th:text="${event.eventEndDatetime}">2021-01-01 10:00:00</td>
-      <td class="currentNumberOfPeople" th:text="${event.currentNumberOfPeople}">0</td>
-      <td class="capacity"th:text="${event.capacity}" >10</td>
+      <td class="placeId" data-th-text="${event.placeId}">1</td>
+      <td class="eventName" data-th-text="${event.eventName}">테스트 이벤트</td>
+      <td class="eventStatus" data-th-text="${event.eventStatus}">OPENED</td>
+      <td class="eventStartDatetime" data-th-text="${event.eventStartDatetime}">2021-01-01 09:00:00</td>
+      <td class="eventEndDatetime" data-th-text="${event.eventEndDatetime}">2021-01-01 10:00:00</td>
+      <td class="currentNumberOfPeople" data-th-text="${event.currentNumberOfPeople}">0</td>
+      <td class="capacity"data-th-text="${event.capacity}" >10</td>
+      <td><a>상세</a></td>
+    </tr>-->
+  <tr>
+    <td class="placeId" >1</td>
+    <td class="eventName" >테스트 이벤트</td>
+    <td class="eventStatus" >OPENED</td>
+    <td class="eventStartDatetime" >2021-01-01 09:00:00</td>
+    <td class="eventEndDatetime">2021-01-01 10:00:00</td>
+    <td class="currentNumberOfPeople" >0</td>
+    <td class="capacity">10</td>
+    <td><a>상세</a></td>
+  </tr>
+
+    <tr>
+      <td class="placeId" >1</td>
+      <td class="eventName" >테스트 이벤트</td>
+      <td class="eventStatus" >OPENED</td>
+      <td class="eventStartDatetime" >2021-01-01 09:00:00</td>
+      <td class="eventEndDatetime">2021-01-01 10:00:00</td>
+      <td class="currentNumberOfPeople" >0</td>
+      <td class="capacity">10</td>
       <td><a>상세</a></td>
     </tr>
   </tbody>
